--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -1,9 +1,9 @@
 {
   "app": {
     "title": "Berries Pick and Mushrooms Collect",
-    "subtitle": "Track your berry and mushroom collections with ease",
+    "subtitle": "Track berry and mushroom collections with ease",
     "welcome": "Welcome to Berry & Mushroom Picking Monitoring",
-    "welcomeDescription": "If you already has account, please navigate to Collections to manage your berry pickings and mushroom finds. When not having account, please create your account and start tracking your foraging adventures."
+    "welcomeDescription": "Collections page allows to manage berry pickings and mushroom finds after creating user account."
   },
   "navigation": {
     "home": "Home",
@@ -13,17 +13,23 @@
   },
   "user": {
     "createAccount": "Create User Account",
-    "enterName": "Enter your name",
+    "login": "Login",
+    "loginButton": "Login",
+    "loginTitle": "Login to Your Account",
+    "enterNameToLogin": "Enter your alias name to login",
+    "userNotFound": "User not found with this alias name",
+    "loginSuccessful": "Login successful!",
+    "enterName": "Alias name",
     "createAccountButton": "Create Account",
     "selectUser": "Select User",
-    "selectUserPlaceholder": "Choose a user...",
-    "selectActiveUser": "Select User:",
+    "selectUserPlaceholder": "- No user selected -",
+    "selectActiveUser": "Select User",
     "currentlyTracking": "Currently tracking collections for:",
     "refreshUsers": "Refresh Users",
     "addingItemsFor": "Adding collecting items for:"
   },
   "stock": {
-    "addItem": "Add Collecting Item",
+    "addItem": "Add Collection",
     "type": "Type",
     "berry": "Berry",
     "mushroom": "Mushroom",
@@ -37,26 +43,26 @@
     "locationRequired": "Location *",
     "notes": "Notes",
     "notesOptional": "Notes (optional)",
-    "addStockButton": "Add Collecting Item",
-    "yourCollections": "Your Collections",
-    "yourCollectionsFull": "Your Berry pickings and Mushroom collections",
+    "addStockButton": "Add Collection",
+    "yourCollections": "All User's Collections",
+    "yourCollectionsFull": "All user's Berry pickings and Mushroom collections",
     "collectedOn": "Collected on",
     "totalValue": "Total value",
-    "noItems": "No collecting items found.",
+    "noItems": "No collections found.",
     "deleteItem": "Delete this item",
     "noUserSelected": "No User Selected",
-    "selectUserToView": "Select a user to view their collection history.",
+    "selectUserToView": "Select a user to view collection history",
     "showingCollectionsFor": "Showing collections for:",
     "loadingCollections": "Loading collections...",
     "noCollectionsYet": "No Collections Yet",
-    "startAddingCollections": "Start adding your berry and mushroom collections!",
+    "startAddingCollections": "Start adding berry and mushroom collections!",
     "quantityLabel": "Quantity:",
     "unitPriceLabel": "Price:",
     "totalPriceLabel": "Total Price:",
     "locationLabel": "Location:",
     "collectedLabel": "Collected:",
     "notesLabel": "Notes:",
-    "confirmDelete": "Are you sure you want to delete this stock item?",
+    "confirmDelete": "Are you sure you want to delete this collecting item?",
     "totalItems": "Total Items",
     "totalRevenue": "Total Revenue",
     "refresh": "Refresh",
@@ -65,7 +71,7 @@
   "placeholders": {
     "berrySpecies": "Choose a berry species...",
     "mushroomSpecies": "Choose a mushroom species...",
-    "customSpecies": "Enter custom species...",
+    "customSpecies": "Add custom species (optional)",
     "quantity": " ",
     "unitPrice": " ",
     "location": "e.g., Forest near lake",
@@ -99,19 +105,19 @@
   },
   "messages": {
     "selectUserFirst": "Please select a user first",
-    "allFieldsRequired": "Species, quantity, price, and location are required",
+    "allFieldsRequired": "Species, quantity, price, and location are required. Notes are optional.",
     "quantityPositive": "Quantity must be a positive number",
     "unitPriceNonNegative": "Price must be a non-negative number",
-    "stockItemCreated": "Collecting item created successfully!",
-    "userCreated": "User account created successfully! You can navigate to Collections to save and track your collections.",
-    "nameRequired": "Name is required",
+    "stockItemCreated": "Collection created successfully!",
+    "userCreated": "User account created successfully! Please navigate to Collections to save and track your collections.",
+    "nameRequired": "Alias name is required",
     "errorCreatingUser": "Error creating user account",
-    "errorCreatingStock": "Error creating collecting item",
+    "errorCreatingStock": "Error creating collection",
     "errorLoadingUsers": "Error loading users",
-    "errorLoadingStock": "Error loading collecting items",
-    "errorDeletingStock": "Error deleting collecting item",
-    "failedToLoadStock": "Failed to load stock items",
-    "failedToDeleteStock": "Failed to delete stock item",
+    "errorLoadingStock": "Error loading collections",
+    "errorDeletingStock": "Error deleting collection",
+    "failedToLoadStock": "Failed to load collections",
+    "failedToDeleteStock": "Failed to delete collection",
     "loading": "Loading...",
     "loadingUsers": "Loading users...",
     "tryAgain": "Try Again"
@@ -128,5 +134,12 @@
     "close": "Close",
     "save": "Save",
     "edit": "Edit"
+  },
+  "language": {
+    "title": "Language",
+    "finnish": "Finnish",
+    "english": "English",
+    "switchToFinnish": "Switch to Finnish",
+    "switchToEnglish": "Switch to English"
   }
 }
