--- a/frontend/src/i18n/locales/fi.json
+++ b/frontend/src/i18n/locales/fi.json
@@ -1,9 +1,9 @@
 {
   "app": {
     "title": "Marjastus ja sienestys",
-    "subtitle": "Seuraa marjojen ja sienten keräilyäsi helposti",
+    "subtitle": "Seuraa marjojen ja sienten keräilyä helposti",
     "welcome": "Tervetuloa marjastus- ja sienestys seurantaan",
-    "welcomeDescription": "Jos sinulla on jo tili, siirrythän Keräilyt-sivulle hallinnoidaksesi marjastuksiasi ja sienilöytöjäsi. Muuten voit aloittaa keräilyseikkailujen tallentamisen ja seuraamisen käyttäjätilin luomisen jälkeen Keräilyt-sivulla."
+    "welcomeDescription": "Keräilyt-sivulla voi hallinnoida marjastuksia ja sienestyksiä käyttäjätilin luomisen jälkeen."
   },
   "navigation": {
     "home": "Koti",
@@ -13,17 +13,23 @@
   },
   "user": {
     "createAccount": "Luo käyttäjätili",
-    "enterName": "Syötä nimesi",
+    "login": "Kirjaudu sisään",
+    "loginButton": "Kirjaudu sisään",
+    "loginTitle": "Kirjaudu tilillesi",
+    "enterNameToLogin": "Syötä nimimerkkisi kirjautuaksesi",
+    "userNotFound": "Käyttäjää ei löytynyt tällä nimimerkillä",
+    "loginSuccessful": "Kirjautuminen onnistui!",
+    "enterName": "Nimimerkki",
     "createAccountButton": "Luo tili",
     "selectUser": "Valitse käyttäjä",
-    "selectUserPlaceholder": "Valitse käyttäjä...",
-    "selectActiveUser": "Valitse käyttäjä:",
+    "selectUserPlaceholder": "- Käyttäjää ei valittu -",
+    "selectActiveUser": "Valitse käyttäjä",
     "currentlyTracking": "Seurataan keräilyjä käyttäjälle:",
     "refreshUsers": "Päivitä käyttäjät",
-    "addingItemsFor": "Lisätään keräilytuotteita käyttäjälle:"
+    "addingItemsFor": "Lisätään keräilyjä käyttäjälle"
   },
   "stock": {
-    "addItem": "Lisää keräilytuote",
+    "addItem": "Lisää keräily",
     "type": "Tyyppi",
     "berry": "Marja",
     "mushroom": "Sieni",
@@ -37,15 +43,15 @@
     "locationRequired": "Sijainti *",
     "notes": "Muistiinpanot",
     "notesOptional": "Muistiinpanot (vapaaehtoinen)",
-    "addStockButton": "Lisää keräilytuote",
-    "yourCollections": "Sinun keräilysi",
-    "yourCollectionsFull": "Sinun marjastuksesi ja sienestyksesi",
+    "addStockButton": "Lisää keräily",
+    "yourCollections": "Kaikki käyttäjän keräilyt",
+    "yourCollectionsFull": "Kaikki käyttäjän marjastukset ja sienestykset",
     "collectedOn": "Kerätty",
     "totalValue": "Kokonaisarvo",
-    "noItems": "Keräilytuotteita ei löytynyt.",
+    "noItems": "Keräilyjä ei löytynyt.",
     "deleteItem": "Poista tämä keräilytuote",
     "noUserSelected": "Käyttäjää ei valittu",
-    "selectUserToView": "Valitse käyttäjä nähdäksesi heidän keräilyhistoriansa.",
+    "selectUserToView": "Valitse käyttäjä nähdäksesi keräilyhistorian",
     "showingCollectionsFor": "Näytetään keräilyjä käyttäjälle:",
     "loadingCollections": "Ladataan keräilyjä...",
     "noCollectionsYet": "Ei keräilyjä vielä",
@@ -56,7 +62,7 @@
     "locationLabel": "Sijainti:",
     "collectedLabel": "Kerätty:",
     "notesLabel": "Muistiinpanot:",
-    "confirmDelete": "Oletko varma, että haluat poistaa tämän keräilytuotteen?",
+    "confirmDelete": "Oletko varma, että haluat poistaa tämän keräilyn?",
     "totalItems": "Tuotteiden määrä",
     "totalRevenue": "Kokonaistulot",
     "refresh": "Päivitä",
@@ -65,13 +71,13 @@
   "placeholders": {
     "berrySpecies": "Valitse marjalaji...",
     "mushroomSpecies": "Valitse sienilaji...",
-    "customSpecies": "Syötä oma laji...",
+    "customSpecies": "Lisää oma laji (valinnainen)",
     "quantity": " ",
     "unitPrice": " ",
     "location": "esim. Metsä järven lähellä",
     "notes": "Mahdolliset lisätiedot..."
   },
-  "species": {
+  "species": { 
     "berries": {
       "blueberry": "Mustikka",
       "lingonberry": "Puolukka",
@@ -99,19 +105,19 @@
   },
   "messages": {
     "selectUserFirst": "Valitse ensin käyttäjä",
-    "allFieldsRequired": "Laji, määrä, hinta ja sijainti ovat pakollisia",
+    "allFieldsRequired": "Laji, määrä, hinta ja sijainti tietojen antaminen on tarvittavaa. Muistiinpanot ovat valinnaisia.",
     "quantityPositive": "Määrän täytyy olla positiivinen luku",
     "unitPriceNonNegative": "Hinnan täytyy olla ei-negatiivinen luku",
-    "stockItemCreated": "Keräilytuote luotu onnistuneesti!",
+    "stockItemCreated": "Keräily luotu onnistuneesti!",
     "userCreated": "Käyttäjätili luotu onnistuneesti! Voit siirtyä Keräilyt-sivulle tallentamaan ja seuraamaan keräilyjäsi.",
-    "nameRequired": "Nimi on pakollinen",
+    "nameRequired": "Käyttäjänimi on pakollinen",
     "errorCreatingUser": "Virhe käyttäjätilin luomisessa",
-    "errorCreatingStock": "Virhe keräilytuotteen luomisessa",
+    "errorCreatingStock": "Virhe keräilyn luomisessa",
     "errorLoadingUsers": "Virhe käyttäjien lataamisessa",
-    "errorLoadingStock": "Virhe keräilytuotteiden lataamisessa",
-    "errorDeletingStock": "Virhe keräilytuotteen poistamisessa",
-    "failedToLoadStock": "Keräilytuotteiden lataaminen epäonnistui",
-    "failedToDeleteStock": "Keräilytuotteen poistaminen epäonnistui",
+    "errorLoadingStock": "Virhe keräilyjen lataamisessa",
+    "errorDeletingStock": "Virhe keräilyn poistamisessa",
+    "failedToLoadStock": "Keräilyjen lataaminen epäonnistui",
+    "failedToDeleteStock": "Keräilyn poistaminen epäonnistui",
     "loading": "Ladataan...",
     "loadingUsers": "Ladataan käyttäjiä...",
     "tryAgain": "Yritä uudelleen"
@@ -128,5 +134,12 @@
     "close": "Sulje",
     "save": "Tallenna",
     "edit": "Muokkaa"
+  },
+  "language": {
+    "title": "Kieli",
+    "finnish": "Suomi",
+    "english": "Englanti",
+    "switchToFinnish": "Vaihda suomeksi",
+    "switchToEnglish": "Switch to English"
   }
 }
