page for buy and sell prices

--- a/frontend/src/i18n/locales/fi.json
+++ b/frontend/src/i18n/locales/fi.json
@@ -2,12 +2,13 @@
   "app": {
     "title": "Marjastus ja sienestys",
     "subtitle": "Seuraa marjojen ja sienten keräilyä helposti",
-    "welcome": "Tervetuloa marjastus- ja sienestys seurantaan",
+    "welcome": "Tervetuloa marjojen ja sienten keräily- ja myyntimäärien seurantaan",
     "welcomeDescription": "Keräilyt-sivulla voi hallinnoida marjastuksia ja sienestyksiä käyttäjätilin luomisen jälkeen."
   },
   "navigation": {
     "home": "Koti",
     "collections": "Keräilyt",
+    "priceMonitoring": "Hintojen Seuranta",
     "goToCollections": "Siirry keräilyihin",
     "goToHome": "Siirry kotiin"
   },
@@ -39,6 +40,10 @@
     "quantityRequired": "Määrä (g) *",
     "unitPrice": "Hinta",
     "unitPriceRequired": "Hinta (€/kg) *",
+    "buyPrice": "Ostohinta",
+    "buyPriceRequired": "Ostohinta (€/kg) *",
+    "sellPrice": "Myyntihinta",
+    "sellPriceRequired": "Myyntihinta (€/kg) *",
     "location": "Sijainti",
     "locationRequired": "Sijainti *",
     "notes": "Muistiinpanot",
@@ -58,15 +63,33 @@
     "startAddingCollections": "Aloita marjojen ja sienten keräily!",
     "quantityLabel": "Määrä:",
     "unitPriceLabel": "Hinta:",
+    "buyPriceLabel": "Ostohinta:",
+    "sellPriceLabel": "Myyntihinta:",
     "totalPriceLabel": "Kokonaishinta:",
+    "totalRevenueLabel": "Kokonaistulot:",
+    "totalCostLabel": "Kokonaiskulut:",
+    "totalProfitLabel": "Kokonaisvoitto:",
+    "profitMarginLabel": "Tuottomarginaali:",
     "locationLabel": "Sijainti:",
     "collectedLabel": "Kerätty:",
     "notesLabel": "Muistiinpanot:",
     "confirmDelete": "Oletko varma, että haluat poistaa tämän keräilyn?",
     "totalItems": "Tuotteiden määrä",
     "totalRevenue": "Kokonaistulot",
+    "totalProfit": "Kokonaisvoitto",
+    "totalCost": "Kokonaiskulut",
+    "profitMargin": "Tuottomarginaali",
     "refresh": "Päivitä",
-    "refreshing": "Päivitetään..."
+    "refreshing": "Päivitetään...",
+    "yearFilter": "Suodata vuoden mukaan",
+    "allYears": "Kaikki vuodet",
+    "profitAnalysis": "Tuottoanalyysi",
+    "yearlyProfits": "Vuosittaiset tuotot",
+    "showProfitBreakdown": "Näytä tuottoerittely",
+    "usePriceMonitoring": "Käytä hintoja Hintojen Seurannasta (suositeltu)",
+    "currentPrices": "Nykyiset hinnat",
+    "noPriceFound": "Hintaa ei löytynyt lajille {species}. Lisää se ensin Hintojen Seurantaan tai poista valinta syöttääksesi manuaalisesti.",
+    "priceYear": "Vuosi"
   },
   "placeholders": {
     "berrySpecies": "Valitse marjalaji...",
@@ -74,6 +97,8 @@
     "customSpecies": "Lisää oma laji (valinnainen)",
     "quantity": " ",
     "unitPrice": " ",
+    "buyPrice": "Ostohinta per kg",
+    "sellPrice": "Myyntihinta per kg",
     "location": "esim. Metsä järven lähellä",
     "notes": "Mahdolliset lisätiedot..."
   },
@@ -105,9 +130,11 @@
   },
   "messages": {
     "selectUserFirst": "Valitse ensin käyttäjä",
-    "allFieldsRequired": "Laji, määrä, hinta ja sijainti tietojen antaminen on tarvittavaa. Muistiinpanot ovat valinnaisia.",
+    "allFieldsRequired": "Laji, määrä, hinnat ja sijainti tietojen antaminen on tarvittavaa. Muistiinpanot ovat valinnaisia.",
     "quantityPositive": "Määrän täytyy olla positiivinen luku",
     "unitPriceNonNegative": "Hinnan täytyy olla ei-negatiivinen luku",
+    "buyPriceNonNegative": "Ostohinnan täytyy olla ei-negatiivinen luku",
+    "sellPriceNonNegative": "Myyntihinnan täytyy olla ei-negatiivinen luku",
     "stockItemCreated": "Keräily luotu onnistuneesti!",
     "userCreated": "Käyttäjätili luotu onnistuneesti! Voit siirtyä Keräilyt-sivulle tallentamaan ja seuraamaan keräilyjäsi.",
     "nameRequired": "Käyttäjänimi on pakollinen",
@@ -120,7 +147,16 @@
     "failedToDeleteStock": "Keräilyn poistaminen epäonnistui",
     "loading": "Ladataan...",
     "loadingUsers": "Ladataan käyttäjiä...",
-    "tryAgain": "Yritä uudelleen"
+    "tryAgain": "Yritä uudelleen",
+    "priceCreated": "Hinta luotu/päivitetty onnistuneesti!",
+    "errorCreatingPrice": "Virhe hinnan luomisessa/päivittämisessä",
+    "priceDeleted": "Hinta poistettu onnistuneesti!",
+    "errorDeletingPrice": "Virhe hinnan poistamisessa",
+    "speciesRequired": "Laji vaaditaan",
+    "yearRequired": "Vuosi vaaditaan",
+    "buyPriceRequired": "Ostohinta vaaditaan",
+    "sellPriceRequired": "Myyntihinta vaaditaan",
+    "confirmDeletePrice": "Oletko varma, että haluat poistaa tämän hintatiedon?"
   },
   "units": {
     "grams": "g",
@@ -141,5 +177,31 @@
     "english": "Englanti",
     "switchToFinnish": "Vaihda suomeksi",
     "switchToEnglish": "Switch to English"
+  },
+  "priceMonitoring": {
+    "title": "Hintojen Seuranta",
+    "subtitle": "Hallitse marjojen ja sienten hintoja vuosittain",
+    "addPrice": "Lisää/Päivitä Hinta",
+    "currentPrices": "Nykyiset Hinnat",
+    "priceHistory": "Hintahistoria",
+    "year": "Vuosi",
+    "yearRequired": "Vuosi *",
+    "buyPrice": "Ostohinta",
+    "buyPriceRequired": "Ostohinta (€/g) *",
+    "sellPrice": "Myyntihinta",
+    "sellPriceRequired": "Myyntihinta (€/g) *",
+    "lastUpdated": "Viimeksi päivitetty",
+    "noPrices": "Hintoja ei löytynyt",
+    "addFirstPrice": "Lisää ensimmäinen hintatietosi aloittaaksesi seurannan!",
+    "pricePerGram": "€/g",
+    "addPriceButton": "Lisää/Päivitä Hinta",
+    "editPrice": "Muokkaa Hintaa",
+    "deletePrice": "Poista Hinta",
+    "yearFilter": "Suodata vuoden mukaan",
+    "allYears": "Kaikki vuodet",
+    "typeFilter": "Suodata tyypin mukaan",
+    "allTypes": "Kaikki tyypit",
+    "speciesFilter": "Suodata lajin mukaan",
+    "allSpecies": "Kaikki lajit"
   }
 }
