--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -8,6 +8,7 @@
   "navigation": {
     "home": "Home",
     "collections": "Collections",
+    "priceMonitoring": "Price Monitoring",
     "goToCollections": "Go to Collections",
     "goToHome": "Go to Home"
   },
@@ -39,6 +40,10 @@
     "quantityRequired": "Quantity (g) *",
     "unitPrice": "Price ",
     "unitPriceRequired": "Price (€/kg) *",
+    "buyPrice": "Buy Price",
+    "buyPriceRequired": "Buy Price (€/kg) *",
+    "sellPrice": "Sell Price",
+    "sellPriceRequired": "Sell Price (€/kg) *",
     "location": "Location",
     "locationRequired": "Location *",
     "notes": "Notes",
@@ -58,15 +63,33 @@
     "startAddingCollections": "Start adding berry and mushroom collections!",
     "quantityLabel": "Quantity:",
     "unitPriceLabel": "Price:",
+    "buyPriceLabel": "Buy Price:",
+    "sellPriceLabel": "Sell Price:",
     "totalPriceLabel": "Total Price:",
+    "totalRevenueLabel": "Total Revenue:",
+    "totalCostLabel": "Total Cost:",
+    "totalProfitLabel": "Total Profit:",
+    "profitMarginLabel": "Profit Margin:",
     "locationLabel": "Location:",
     "collectedLabel": "Collected:",
     "notesLabel": "Notes:",
     "confirmDelete": "Are you sure you want to delete this collecting item?",
     "totalItems": "Total Items",
     "totalRevenue": "Total Revenue",
+    "totalProfit": "Total Profit",
+    "totalCost": "Total Cost",
+    "profitMargin": "Profit Margin",
     "refresh": "Refresh",
-    "refreshing": "Refreshing..."
+    "refreshing": "Refreshing...",
+    "yearFilter": "Filter by Year",
+    "allYears": "All Years",
+    "profitAnalysis": "Profit Analysis",
+    "yearlyProfits": "Yearly Profits",
+    "showProfitBreakdown": "Show Profit Breakdown",
+    "usePriceMonitoring": "Use prices from Price Monitoring (recommended)",
+    "currentPrices": "Current prices",
+    "noPriceFound": "No price found for {species}. Add it in Price Monitoring first or uncheck to enter manually.",
+    "priceYear": "Year"
   },
   "placeholders": {
     "berrySpecies": "Choose a berry species...",
@@ -74,6 +97,8 @@
     "customSpecies": "Add custom species (optional)",
     "quantity": " ",
     "unitPrice": " ",
+    "buyPrice": "Buy price per kg",
+    "sellPrice": "Sell price per kg",
     "location": "e.g., Forest near lake",
     "notes": "Any additional information..."
   },
@@ -105,9 +130,11 @@
   },
   "messages": {
     "selectUserFirst": "Please select a user first",
-    "allFieldsRequired": "Species, quantity, price, and location are required. Notes are optional.",
+    "allFieldsRequired": "Species, quantity, prices, and location are required. Notes are optional.",
     "quantityPositive": "Quantity must be a positive number",
     "unitPriceNonNegative": "Price must be a non-negative number",
+    "buyPriceNonNegative": "Buy price must be a non-negative number",
+    "sellPriceNonNegative": "Sell price must be a non-negative number",
     "stockItemCreated": "Collection created successfully!",
     "userCreated": "User account created successfully! Please navigate to Collections to save and track your collections.",
     "nameRequired": "Alias name is required",
@@ -120,7 +147,16 @@
     "failedToDeleteStock": "Failed to delete collection",
     "loading": "Loading...",
     "loadingUsers": "Loading users...",
-    "tryAgain": "Try Again"
+    "tryAgain": "Try Again",
+    "priceCreated": "Price created/updated successfully!",
+    "errorCreatingPrice": "Error creating/updating price",
+    "priceDeleted": "Price deleted successfully!",
+    "errorDeletingPrice": "Error deleting price",
+    "speciesRequired": "Species is required",
+    "yearRequired": "Year is required",
+    "buyPriceRequired": "Buy price is required",
+    "sellPriceRequired": "Sell price is required",
+    "confirmDeletePrice": "Are you sure you want to delete this price entry?"
   },
   "units": {
     "grams": "g",
@@ -141,5 +177,31 @@
     "english": "English",
     "switchToFinnish": "Switch to Finnish",
     "switchToEnglish": "Switch to English"
+  },
+  "priceMonitoring": {
+    "title": "Price Monitoring",
+    "subtitle": "Manage berry and mushroom prices by year",
+    "addPrice": "Add/Update Price",
+    "currentPrices": "Current Prices",
+    "priceHistory": "Price History",
+    "year": "Year",
+    "yearRequired": "Year *",
+    "buyPrice": "Buy Price",
+    "buyPriceRequired": "Buy Price (€/g) *",
+    "sellPrice": "Sell Price",
+    "sellPriceRequired": "Sell Price (€/g) *",
+    "lastUpdated": "Last Updated",
+    "noPrices": "No prices found",
+    "addFirstPrice": "Add your first price entry to start monitoring!",
+    "pricePerGram": "€/g",
+    "addPriceButton": "Add/Update Price",
+    "editPrice": "Edit Price",
+    "deletePrice": "Delete Price",
+    "yearFilter": "Filter by Year",
+    "allYears": "All Years",
+    "typeFilter": "Filter by Type",
+    "allTypes": "All Types",
+    "speciesFilter": "Filter by Species",
+    "allSpecies": "All Species"
   }
 }
