berries and mushrooms shop features

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -1,15 +1,15 @@
 {
   "app": {
-    "title": "Berries Pick and Mushrooms Collect",
-    "subtitle": "Track berry and mushroom collections with ease",
-    "welcome": "Welcome to Berry & Mushroom Picking Monitoring",
-    "welcomeDescription": "Collections page allows to manage berry pickings and mushroom finds after creating user account."
+    "title": "Berries and Mushrooms Shop",
+    "subtitle": "Track berry and mushroom sales with ease",
+    "welcome": "Welcome to Berry & Mushroom Shop",
+    "welcomeDescription": "Prices and Sales pages allows to manage berry and mushroom sales after creating user account."
   },
   "navigation": {
     "home": "Home",
-    "collections": "Collections",
-    "priceMonitoring": "Price Monitoring",
-    "goToCollections": "Go to Collections",
+    "collections": "Sales",
+    "priceMonitoring": "Prices",
+    "goToCollections": "Go to Sales",
     "goToHome": "Go to Home"
   },
   "user": {
@@ -25,12 +25,12 @@
     "selectUser": "Select User",
     "selectUserPlaceholder": "- No user selected -",
     "selectActiveUser": "Select User",
-    "currentlyTracking": "Currently tracking collections for:",
+    "currentlyTracking": "Currently tracking sales for:",
     "refreshUsers": "Refresh Users",
     "addingItemsFor": "Adding collecting items for:"
   },
   "stock": {
-    "addItem": "Add Collection",
+    "addItem": "Add Sale",
     "type": "Type",
     "berry": "Berry",
     "mushroom": "Mushroom",
@@ -48,19 +48,19 @@
     "locationRequired": "Location *",
     "notes": "Notes",
     "notesOptional": "Notes (optional)",
-    "addStockButton": "Add Collection",
-    "yourCollections": "All User's Collections",
-    "yourCollectionsFull": "All user's Berry pickings and Mushroom collections",
-    "collectedOn": "Collected on",
+    "addStockButton": "Add Sale",
+    "yourCollections": "All User's Sales",
+    "yourCollectionsFull": "All user's Berry and Mushroom sales",
+    "collectedOn": "Sold on",
     "totalValue": "Total value",
-    "noItems": "No collections found.",
+    "noItems": "No sales found.",
     "deleteItem": "Delete this item",
     "noUserSelected": "No User Selected",
-    "selectUserToView": "Select a user to view collection history",
-    "showingCollectionsFor": "Showing collections for:",
-    "loadingCollections": "Loading collections...",
-    "noCollectionsYet": "No Collections Yet",
-    "startAddingCollections": "Start adding berry and mushroom collections!",
+    "selectUserToView": "Select a user to view sales history",
+    "showingCollectionsFor": "Showing sales for:",
+    "loadingCollections": "Loading sales...",
+    "noCollectionsYet": "No Sales Yet",
+    "startAddingCollections": "Start adding berry and mushroom sales!",
     "quantityLabel": "Quantity:",
     "unitPriceLabel": "Price:",
     "buyPriceLabel": "Buy Price:",
@@ -71,7 +71,7 @@
     "totalProfitLabel": "Total Profit:",
     "profitMarginLabel": "Profit Margin:",
     "locationLabel": "Location:",
-    "collectedLabel": "Collected:",
+    "collectedLabel": "Sold:",
     "notesLabel": "Notes:",
     "confirmDelete": "Are you sure you want to delete this collecting item?",
     "totalItems": "Total Items",
@@ -88,7 +88,7 @@
     "showProfitBreakdown": "Show Profit Breakdown",
     "usePriceMonitoring": "Use prices from Price Monitoring (recommended)",
     "currentPrices": "Current prices",
-    "noPriceFound": "No price found for {species}. Add it in Price Monitoring first or uncheck to enter manually.",
+    "noPriceFound": "No price found for species. Add it in Prices page first or uncheck to enter manually.",
     "priceYear": "Year"
   },
   "placeholders": {
@@ -135,16 +135,16 @@
     "unitPriceNonNegative": "Price must be a non-negative number",
     "buyPriceNonNegative": "Buy price must be a non-negative number",
     "sellPriceNonNegative": "Sell price must be a non-negative number",
-    "stockItemCreated": "Collection created successfully!",
-    "userCreated": "User account created successfully! Please navigate to Collections to save and track your collections.",
+    "stockItemCreated": "Sale created successfully!",
+    "userCreated": "User account created successfully! Please navigate to Sales or Prices page to save and track your sales.",
     "nameRequired": "Alias name is required",
     "errorCreatingUser": "Error creating user account",
-    "errorCreatingStock": "Error creating collection",
+    "errorCreatingStock": "Error creating sale",
     "errorLoadingUsers": "Error loading users",
-    "errorLoadingStock": "Error loading collections",
-    "errorDeletingStock": "Error deleting collection",
-    "failedToLoadStock": "Failed to load collections",
-    "failedToDeleteStock": "Failed to delete collection",
+    "errorLoadingStock": "Error loading sales",
+    "errorDeletingStock": "Error deleting sale",
+    "failedToLoadStock": "Failed to load sales",
+    "failedToDeleteStock": "Failed to delete sale",
     "loading": "Loading...",
     "loadingUsers": "Loading users...",
     "tryAgain": "Try Again",
@@ -187,13 +187,13 @@
     "year": "Year",
     "yearRequired": "Year *",
     "buyPrice": "Buy Price",
-    "buyPriceRequired": "Buy Price (€/g) *",
+    "buyPriceRequired": "Buy Price (€/kg) *",
     "sellPrice": "Sell Price",
-    "sellPriceRequired": "Sell Price (€/g) *",
+    "sellPriceRequired": "Sell Price (€/kg) *",
     "lastUpdated": "Last Updated",
     "noPrices": "No prices found",
     "addFirstPrice": "Add your first price entry to start monitoring!",
-    "pricePerGram": "€/g",
+    "pricePerKg": "€/kg",
     "addPriceButton": "Add/Update Price",
     "editPrice": "Edit Price",
     "deletePrice": "Delete Price",
@@ -203,5 +203,18 @@
     "allTypes": "All Types",
     "speciesFilter": "Filter by Species",
     "allSpecies": "All Species"
+  },
+  "userSalesTable": {
+    "title": "User Sales Summary",
+    "userName": "User",
+    "totalSales": "Total Sales",
+    "totalCost": "Total Cost", 
+    "totalProfit": "Total Profit",
+    "profitMargin": "Profit Margin",
+    "itemCount": "Items Sold",
+    "summary": "Summary",
+    "allUsers": "All Users",
+    "noSalesData": "No sales data available",
+    "addCollectionsToSee": "Add collections to see user sales analysis"
   }
 }
