--- a/frontend/src/i18n/locales/fi.json
+++ b/frontend/src/i18n/locales/fi.json
@@ -1,15 +1,15 @@
 {
   "app": {
-    "title": "Marjastus ja sienestys",
-    "subtitle": "Seuraa marjojen ja sienten keräilyä helposti",
-    "welcome": "Tervetuloa marjojen ja sienten keräily- ja myyntimäärien seurantaan",
-    "welcomeDescription": "Keräilyt-sivulla voi hallinnoida marjastuksia ja sienestyksiä käyttäjätilin luomisen jälkeen."
+    "title": "Marjastus ja sienestys kauppa",
+    "subtitle": "Seuraa marjojen ja sienten myyntiä helposti",
+    "welcome": "Tervetuloa marja ja sieni -",
+    "welcomeDescription": "Hinnat ja Myynnit -sivuilla voit hallinnoida marja- ja sienikauppaa käyttäjätilin luomisen jälkeen."
   },
   "navigation": {
     "home": "Koti",
-    "collections": "Keräilyt",
-    "priceMonitoring": "Hintojen Seuranta",
-    "goToCollections": "Siirry keräilyihin",
+    "collections": "Myynnit",
+    "priceMonitoring": "Hinnat",
+    "goToCollections": "Siirry myyntiin",
     "goToHome": "Siirry kotiin"
   },
   "user": {
@@ -25,12 +25,12 @@
     "selectUser": "Valitse käyttäjä",
     "selectUserPlaceholder": "- Käyttäjää ei valittu -",
     "selectActiveUser": "Valitse käyttäjä",
-    "currentlyTracking": "Seurataan keräilyjä käyttäjälle:",
+    "currentlyTracking": "Seurataan myyntejä käyttäjälle:",
     "refreshUsers": "Päivitä käyttäjät",
-    "addingItemsFor": "Lisätään keräilyjä käyttäjälle"
+    "addingItemsFor": "Lisätään myyntejä käyttäjälle"
   },
   "stock": {
-    "addItem": "Lisää keräily",
+    "addItem": "Lisää myynti",
     "type": "Tyyppi",
     "berry": "Marja",
     "mushroom": "Sieni",
@@ -48,19 +48,19 @@
     "locationRequired": "Sijainti *",
     "notes": "Muistiinpanot",
     "notesOptional": "Muistiinpanot (vapaaehtoinen)",
-    "addStockButton": "Lisää keräily",
-    "yourCollections": "Kaikki käyttäjän keräilyt",
+    "addStockButton": "Lisää myynti",
+    "yourCollections": "Kaikki käyttäjän myynnit",
     "yourCollectionsFull": "Kaikki käyttäjän marjastukset ja sienestykset",
-    "collectedOn": "Kerätty",
+    "collectedOn": "Myyty",
     "totalValue": "Kokonaisarvo",
-    "noItems": "Keräilyjä ei löytynyt.",
-    "deleteItem": "Poista tämä keräilytuote",
+    "noItems": "Myyntejä ei löytynyt.",
+    "deleteItem": "Poista tämä myynti",
     "noUserSelected": "Käyttäjää ei valittu",
-    "selectUserToView": "Valitse käyttäjä nähdäksesi keräilyhistorian",
-    "showingCollectionsFor": "Näytetään keräilyjä käyttäjälle:",
-    "loadingCollections": "Ladataan keräilyjä...",
-    "noCollectionsYet": "Ei keräilyjä vielä",
-    "startAddingCollections": "Aloita marjojen ja sienten keräily!",
+    "selectUserToView": "Valitse käyttäjä nähdäksesi myyntihistorian",
+    "showingCollectionsFor": "Näytetään myyntejä käyttäjälle:",
+    "loadingCollections": "Ladataan myyntejä...",
+    "noCollectionsYet": "Ei myyntejä vielä",
+    "startAddingCollections": "Aloita marjojen ja sienten myynti!",
     "quantityLabel": "Määrä:",
     "unitPriceLabel": "Hinta:",
     "buyPriceLabel": "Ostohinta:",
@@ -71,9 +71,9 @@
     "totalProfitLabel": "Kokonaisvoitto:",
     "profitMarginLabel": "Tuottomarginaali:",
     "locationLabel": "Sijainti:",
-    "collectedLabel": "Kerätty:",
+    "collectedLabel": "Myyty:",
     "notesLabel": "Muistiinpanot:",
-    "confirmDelete": "Oletko varma, että haluat poistaa tämän keräilyn?",
+    "confirmDelete": "Oletko varma, että haluat poistaa tämän myynnin?",
     "totalItems": "Tuotteiden määrä",
     "totalRevenue": "Kokonaistulot",
     "totalProfit": "Kokonaisvoitto",
@@ -88,7 +88,7 @@
     "showProfitBreakdown": "Näytä tuottoerittely",
     "usePriceMonitoring": "Käytä hintoja Hintojen Seurannasta (suositeltu)",
     "currentPrices": "Nykyiset hinnat",
-    "noPriceFound": "Hintaa ei löytynyt lajille {species}. Lisää se ensin Hintojen Seurantaan tai poista valinta syöttääksesi manuaalisesti.",
+    "noPriceFound": "Hintaa ei löytynyt lajille. Lisää se ensin Hinnat-sivulle tai poista valinta syöttääksesi manuaalisesti.",
     "priceYear": "Vuosi"
   },
   "placeholders": {
@@ -135,16 +135,16 @@
     "unitPriceNonNegative": "Hinnan täytyy olla ei-negatiivinen luku",
     "buyPriceNonNegative": "Ostohinnan täytyy olla ei-negatiivinen luku",
     "sellPriceNonNegative": "Myyntihinnan täytyy olla ei-negatiivinen luku",
-    "stockItemCreated": "Keräily luotu onnistuneesti!",
-    "userCreated": "Käyttäjätili luotu onnistuneesti! Voit siirtyä Keräilyt-sivulle tallentamaan ja seuraamaan keräilyjäsi.",
+    "stockItemCreated": "Myynti luotu onnistuneesti!",
+    "userCreated": "Käyttäjätili luotu onnistuneesti! Voit siirtyä Hinnat ja Myynnit -sivuille tallentamaan ja seuraamaan myyntitietoja.",
     "nameRequired": "Käyttäjänimi on pakollinen",
     "errorCreatingUser": "Virhe käyttäjätilin luomisessa",
-    "errorCreatingStock": "Virhe keräilyn luomisessa",
+    "errorCreatingStock": "Virhe myynnin luomisessa",
     "errorLoadingUsers": "Virhe käyttäjien lataamisessa",
-    "errorLoadingStock": "Virhe keräilyjen lataamisessa",
-    "errorDeletingStock": "Virhe keräilyn poistamisessa",
-    "failedToLoadStock": "Keräilyjen lataaminen epäonnistui",
-    "failedToDeleteStock": "Keräilyn poistaminen epäonnistui",
+    "errorLoadingStock": "Virhe myynnin lataamisessa",
+    "errorDeletingStock": "Virhe myynnin poistamisessa",
+    "failedToLoadStock": "Myynnit lataaminen epäonnistui",
+    "failedToDeleteStock": "Myynnin poistaminen epäonnistui",
     "loading": "Ladataan...",
     "loadingUsers": "Ladataan käyttäjiä...",
     "tryAgain": "Yritä uudelleen",
@@ -187,13 +187,13 @@
     "year": "Vuosi",
     "yearRequired": "Vuosi *",
     "buyPrice": "Ostohinta",
-    "buyPriceRequired": "Ostohinta (€/g) *",
+    "buyPriceRequired": "Ostohinta (€/kg) *",
     "sellPrice": "Myyntihinta",
-    "sellPriceRequired": "Myyntihinta (€/g) *",
+    "sellPriceRequired": "Myyntihinta (€/kg) *",
     "lastUpdated": "Viimeksi päivitetty",
     "noPrices": "Hintoja ei löytynyt",
     "addFirstPrice": "Lisää ensimmäinen hintatietosi aloittaaksesi seurannan!",
-    "pricePerGram": "€/g",
+    "pricePerKg": "€/kg",
     "addPriceButton": "Lisää/Päivitä Hinta",
     "editPrice": "Muokkaa Hintaa",
     "deletePrice": "Poista Hinta",
@@ -203,5 +203,18 @@
     "allTypes": "Kaikki tyypit",
     "speciesFilter": "Suodata lajin mukaan",
     "allSpecies": "Kaikki lajit"
+  },
+  "userSalesTable": {
+    "title": "Käyttäjien myyntitiedot",
+    "userName": "Käyttäjä",
+    "totalSales": "Myynti yhteensä",
+    "totalCost": "Kustannukset yhteensä", 
+    "totalProfit": "Voitto yhteensä",
+    "profitMargin": "Tuottomarginaali",
+    "itemCount": "Myyty määrä",
+    "summary": "Yhteenveto",
+    "allUsers": "Kaikki käyttäjät",
+    "noSalesData": "Ei myyntitietoja saatavilla",
+    "addCollectionsToSee": "Lisää keräyksiä nähdäksesi käyttäjien myyntianalyysin"
   }
 }
