build and typo fixes

--- a/frontend/src/i18n/locales/fi.json
+++ b/frontend/src/i18n/locales/fi.json
@@ -2,7 +2,7 @@
   "app": {
     "title": "Marjastus ja sienestys kauppa",
     "subtitle": "Seuraa marjojen ja sienten myyntiä helposti",
-    "welcome": "Tervetuloa marja ja sieni -",
+    "welcome": "Tervetuloa marjastus ja sienestys kauppaan",
     "welcomeDescription": "Hinnat ja Myynnit -sivuilla voit hallinnoida marja- ja sienikauppaa käyttäjätilin luomisen jälkeen."
   },
   "navigation": {
