--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -1,19 +1,23 @@
 {
   "app": {
-    "title": "Berries and Mushrooms Shop",
+    "title": "Berries and Mushrooms Store",
     "subtitle": "Track berry and mushroom sales with ease",
-    "welcome": "Welcome to Berry & Mushroom Shop",
-    "welcomeDescription": "Prices and Sales pages allows to manage berry and mushroom sales after creating user account."
+    "welcome": "Welcome to Berry & Mushroom Store",
+    "welcomeDescription": "Prices and Sales pages allows to manage berry and mushroom sales after creating user account.",
+    "mainContent": "Main application content"
   },
   "navigation": {
     "home": "Home",
     "collections": "Sales",
     "priceMonitoring": "Prices",
     "goToCollections": "Go to Sales",
-    "goToHome": "Go to Home"
+    "goToHome": "Go to Home",
+    "mainNavigation": "Main navigation",
+    "accountActions": "Account actions"
   },
   "user": {
     "createAccount": "Create User Account",
+    "createAccountDescription": "Create a new user account to start tracking your berry and mushroom sales.",
     "login": "Login",
     "loginButton": "Login",
     "loginTitle": "Login to Your Account",
@@ -27,7 +31,9 @@
     "selectActiveUser": "Select User",
     "currentlyTracking": "Currently tracking sales for:",
     "refreshUsers": "Refresh Users",
-    "addingItemsFor": "Adding collecting items for:"
+    "refreshUsersDescription": "Refresh the list of available users",
+    "addingItemsFor": "Adding collecting items for:",
+    "userSelectorDescription": "Select a user to view and manage their sales records"
   },
   "stock": {
     "addItem": "Add Sale",
@@ -44,8 +50,6 @@
     "buyPriceRequired": "Buy Price (€/kg) *",
     "sellPrice": "Sell Price",
     "sellPriceRequired": "Sell Price (€/kg) *",
-    "location": "Location",
-    "locationRequired": "Location *",
     "notes": "Notes",
     "notesOptional": "Notes (optional)",
     "addStockButton": "Add Sale",
@@ -70,7 +74,6 @@
     "totalCostLabel": "Total Cost:",
     "totalProfitLabel": "Total Profit:",
     "profitMarginLabel": "Profit Margin:",
-    "locationLabel": "Location:",
     "collectedLabel": "Sold:",
     "notesLabel": "Notes:",
     "confirmDelete": "Are you sure you want to delete this collecting item?",
@@ -81,15 +84,24 @@
     "profitMargin": "Profit Margin",
     "refresh": "Refresh",
     "refreshing": "Refreshing...",
+    "refreshStockList": "Refresh the stock list",
     "yearFilter": "Filter by Year",
     "allYears": "All Years",
+    "yearFilterDescription": "Filter items by collection year",
     "profitAnalysis": "Profit Analysis",
     "yearlyProfits": "Yearly Profits",
     "showProfitBreakdown": "Show Profit Breakdown",
     "usePriceMonitoring": "Use prices from Price Monitoring (recommended)",
     "currentPrices": "Current prices",
     "noPriceFound": "No price found for species. Add it in Prices page first or uncheck to enter manually.",
-    "priceYear": "Year"
+    "priceYear": "Year",
+    "summaryStatistics": "Summary statistics",
+    "stockItemsList": "List of stock items",
+    "typeDescription": "Select the type of item you collected",
+    "speciesDescription": "Choose the species of berry or mushroom",
+    "customSpeciesLabel": "Custom species name",
+    "quantityDescription": "Enter the quantity in grams",
+    "submitButtonDescription": "Submit the form to add a new stock item"
   },
   "placeholders": {
     "berrySpecies": "Choose a berry species...",
@@ -99,7 +111,6 @@
     "unitPrice": " ",
     "buyPrice": "Buy price per kg",
     "sellPrice": "Sell price per kg",
-    "location": "e.g., Forest near lake",
     "notes": "Any additional information..."
   },
   "species": {
@@ -130,7 +141,7 @@
   },
   "messages": {
     "selectUserFirst": "Please select a user first",
-    "allFieldsRequired": "Species, quantity, prices, and location are required. Notes are optional.",
+    "allFieldsRequired": "Species, quantity, and prices are required. Notes are optional.",
     "quantityPositive": "Quantity must be a positive number",
     "unitPriceNonNegative": "Price must be a non-negative number",
     "buyPriceNonNegative": "Buy price must be a non-negative number",
@@ -148,6 +159,7 @@
     "loading": "Loading...",
     "loadingUsers": "Loading users...",
     "tryAgain": "Try Again",
+    "tryAgainDescription": "Try loading the users again",
     "priceCreated": "Price created/updated successfully!",
     "errorCreatingPrice": "Error creating/updating price",
     "priceDeleted": "Price deleted successfully!",
